k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jiraetl
spec:
  type: NodePort
  selector:
    app: jiraetl
  ports:
    - port: 5035
